# rust-chatbot

./: README.md
backend/: .gitignore  Cargo.toml
backend/src/: main.rs
backend/src/adapters/: ai.rs  mod.rs
backend/src/adapters/gemini_response/: ai.rs  mod.rs
backend/src/handlers/: chat_bot.rs  first_route.rs  mod.rs
backend/src/routes/: web_api.rs
backend/src/types/: ai_response_types.rs  message_req_types.rs  mod.rs
backend/src/web/: mod.rs
frontend/frontend/src/: App.jsx
frontend/frontend/src/components/: Chatbox.jsx
