[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
serde = {version = "1.0.228", features = ["derive"]}
serde_json = "1.0.149"
tokio = {version = "1.49.0", features = ["full"]}
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.22"
sqlx = { version = "0.8.6", features = [
    "postgres",
    "runtime-tokio",
    "chrono",
    "macros",
    "uuid",
] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
http = "1.4.0"
